<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    android:scrollbars="none"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.SignUp">

        <!-- Logo -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/brand_new_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signLogo">


            <!-- first name   -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextSignFName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:hint="@string/first_name"

                app:boxStrokeColor="@color/base_color"


                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- last name   -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextSignlName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:hint="@string/last_name"

                app:boxStrokeColor="@color/base_color"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTextSignFName"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <!-- phone   -->

        <!-- email   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextSignMail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/mail"


            app:boxStrokeColor="@color/base_color"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linName"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
         >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signupMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- pass   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextSignPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"


            app:boxStrokeColor="@color/base_color"
            app:endIconMode="password_toggle"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@id/layoutTextSignMail"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />


        </com.google.android.material.textfield.TextInputLayout>

  <!-- pass   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextSignPass22"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"


            app:boxStrokeColor="@color/base_color"
            app:endIconMode="password_toggle"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@id/layoutTextSignPass"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signup_passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <!--  gender -->

        <!--btn commit-->
        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTextSignPass22">


            <RadioButton
                android:id="@+id/rb_btm_specialist"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:buttonTint="@color/base_color"
                android:layout_height="wrap_content"
                android:text="@string/specialist"
                android:textColor="@color/black"
                />

            <RadioButton
                android:id="@+id/rb_btm_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:buttonTint="@color/base_color"
                android:layout_height="wrap_content"
                android:text="@string/parent" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_gender" />

        <!--progress Bar -->

        <ProgressBar
            android:id="@+id/progressSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/shapr_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_gender" />
        <!--create New Account-->
        <Button
            android:id="@+id/tvGotoLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="60dp"
            android:text="@string/i_have_already_account"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_gender" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>