<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp"
    android:scrollbars="none"
    android:layoutDirection="rtl"
    tools:context=".ADHD.UI.AdhdTestsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroud_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/adhd"
                    android:fontFamily="@font/cairo_bold"
                    android:textColor="@color/tv_test_name_color"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/adhd_ml"
                    android:fontFamily="@font/cairo"
                    android:justificationMode="inter_word"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/btnGoToMentalHealthParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:paddingRight="0dp"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/goToTest"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/baseline_arrow_circle_left_24"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>